--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bersihkan-nusantara",
+  "name": "jadwal-piala-dunia",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "next": "14.1.4",
+    "clsx": "^2.1.0"
   },
   "devDependencies": {
     "typescript": "^5",
